@@ -22,5 +22,37 @@
 
 <PRE>Now is the time for all good men to come to the aide of their country.</PRE>
 
+<P ALIGN="left">This paragraph contains left-aligned text.
+Now is the time for all good men to come to the aide of their country.
+<B>Now is the time for all good men to come to the aide of their country.</B>
+<I>Now is the time for all good men to come to the aide of their country.
+<B>Now is the time for all good men to come to the aide of their country.</B></I>
+<U>Now is the time for all good men to come to the aide of their country.</U>
+<STRIKE>Now is the time for all good men to come to the aide of their country.</STRIKE>
+
+<P ALIGN="center">This paragraph contains centered text.
+Now is the time for all good men to come to the aide of their country.
+<B>Now is the time for all good men to come to the aide of their country.</B>
+<I>Now is the time for all good men to come to the aide of their country.
+<B>Now is the time for all good men to come to the aide of their country.</B></I>
+<U>Now is the time for all good men to come to the aide of their country.</U>
+<STRIKE>Now is the time for all good men to come to the aide of their country.</STRIKE>
+
+<P ALIGN="right">This paragraph contains right-aligned text.
+Now is the time for all good men to come to the aide of their country.
+<B>Now is the time for all good men to come to the aide of their country.</B>
+<I>Now is the time for all good men to come to the aide of their country.
+<B>Now is the time for all good men to come to the aide of their country.</B></I>
+<U>Now is the time for all good men to come to the aide of their country.</U>
+<STRIKE>Now is the time for all good men to come to the aide of their country.</STRIKE>
+
+<P ALIGN="justify">This paragraph contains justified text.
+Now is the time for all good men to come to the aide of their country.
+<B>Now is the time for all good men to come to the aide of their country.</B>
+<I>Now is the time for all good men to come to the aide of their country.
+<B>Now is the time for all good men to come to the aide of their country.</B></I>
+<U>Now is the time for all good men to come to the aide of their country.</U>
+<STRIKE>Now is the time for all good men to come to the aide of their country.</STRIKE>
+
 </BODY>
 </HTML>
