@@ -1,4 +1,4 @@
-#HTMLDOC 1.8.10
+#HTMLDOC 1.8.11
 14
 attributes.html
 basic.html
@@ -14,4 +14,4 @@ table-rowspan.html
 table-simple.html
 table-valign.html
 whitespace.html
--t ps2 -f testsuite.ps --webpage --no-title --linkstyle underline --links --size Universal --left 1.00in --right 0.50in --top 0.50in --bottom 0.50in --header .t. --footer h.1 --tocheader .t. --tocfooter ..i --portrait --color --no-pscommands --compression=1 --jpeg=0 --fontsize 11.0 --fontspacing 1.2 --headingfont Helvetica --bodyfont Times --headfootsize 11.0 --headfootfont Helvetica --charset 8859-1 --browserwidth 680
+-t pdf12 -f testsuite.pdf --webpage --no-title --linkstyle underline --size Universal --left 1.00in --right 0.50in --top 0.50in --bottom 0.50in --header .t. --footer h.1 --tocheader .t. --tocfooter ..i --portrait --color --no-pscommands --no-compression --jpeg=0 --fontsize 11.0 --fontspacing 1.2 --headingfont Helvetica --bodyfont Times --headfootsize 11.0 --headfootfont Helvetica --charset 8859-1 --links --no-truetype --pagemode document --pagelayout single --firstpage p1 --pageeffect none --pageduration 10 --effectduration 1.0 --no-encryption --permissions all  --owner-password ""  --user-password "" --browserwidth 680
